Name:             diskheap
Version:          0.0.0
Description:      Block based storage heap on disk.
Synopsis:         Block based storage heap on disk.
Category:         Data, System
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.2

Library
  GHC-Options:      -threaded -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*, mtl, bytestring, containers, binary, transformers, fclabels

  Exposed-modules:  System.Heap.Heap, System.Heap.Pointer, System.Heap.Read, System.Heap.Write, System.Heap.Alloc, System.Heap.Error

